--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,33 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: -apple-system, "Helvetica Neue", Arial, sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.sidebarStyle {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: .75rem;
+    padding: .5rem .75rem;
+    background-color: #7A766E;
+    color: #efefef;
+    z-index: 1 !important;
+    box-sizing: border-box;
 }
 
 .mapContainer {
-  width: 100vw;
-  height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 100vh;
 }
