--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,23 @@ body {
     font-weight: normal;
 }
 
+.is-loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #536580;
+    padding-top: 22%;
+    text-shadow: 0 2px 3px rgba(255, 255, 255, .4);
+    background: rgba(255, 255, 255, .6);
+    font-size: 1.5rem;
+    z-index: 99999;
+}
+
 h1 {
     font-size: 1rem;
     line-height: 1;
@@ -67,16 +84,34 @@ a {
 .mapboxgl-popup-content {
     padding: 1rem;
 }
+
 .mapboxgl-popup-content {
     font-size: 1rem;
     border-radius: 4px;
+    min-width: 320px;
+    padding: 1rem 1.25rem;
 }
-.mapboxgl-popup p{
+
+.mapboxgl-popup h3 {
+    margin: .5rem 0;
+}
+
+.mapboxgl-popup p {
     color: #404040;
 }
+
+/*.mapboxgl-popup p.meta {*/
+/*    color: #666;*/
+/*}*/
+/*.mapboxgl-popup p.meta .divider {*/
+/*    color: #efefef;*/
+/*    margin: 0 .2rem;*/
+/*}*/
+
 .mapboxgl-popup a {
     color: orange;
 }
+
 .mapboxgl-popup-close-button {
     font-size: 1.25rem;
     padding: 0 .5rem;
