Tweaked the language toggle button color.

--- a/src/index.scss
+++ b/src/index.scss
@@ -104,7 +104,7 @@ body {
   -webkit-appearance: none;
   padding: 0.5rem .75rem;
   color: $link;
-  background: #e5edff;
+  background: rgba(255, 255, 255, .8);
   border: 0;
   border-radius: 4px;
   text-shadow: none;
