--- a/src/index.scss
+++ b/src/index.scss
@@ -140,7 +140,7 @@ body {
 }
 
 .marker {
-  background-image: url('/images/pin.svg');
+  background-image: url('images/pin.svg');
   background-size: auto 100%;
   width: 32px;
   height: 32px;
