--- a/src/index.scss
+++ b/src/index.scss
@@ -66,7 +66,7 @@ body {
   box-sizing: border-box;
 
   * {
-    text-shadow: 0 2px 3px rgba(255, 255, 255, .6), 0 -2px 3px rgba(255, 255, 255, .6);
+    text-shadow: 0 2px 2px rgba(255, 255, 255, 1), 0 -2px 2px rgba(255, 255, 255, 1);
   }
 
   h1 {
